--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,5 +17,22 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  
   font-family: Arial, Helvetica, sans-serif;
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #2b2b2c; 
+  border-radius: 9999px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #2b2b2c; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: #111213;
 }
